--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -257,6 +257,9 @@
                                         </segments>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="selectedSegmentTintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <action selector="toggleValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="1u2-YA-Glt"/>
+                                        </connections>
                                     </segmentedControl>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xAN-O2-c5z">
                                         <rect key="frame" x="9.9999999999999964" y="0.0" width="61.666666666666657" height="49"/>
@@ -334,7 +337,7 @@
                         <outlet property="redoBtn" destination="vH1-W0-Wne" id="7O5-OK-w88"/>
                         <outlet property="scrollNav" destination="a4a-vU-pIZ" id="WpX-ev-BOX"/>
                         <outlet property="scrollNavBar" destination="u63-dI-EAW" id="0Wl-Dt-2cZ"/>
-                        <outlet property="segmentedControl" destination="Z55-DN-7Ii" id="Xbn-kS-CbZ"/>
+                        <outlet property="segmentedControl" destination="Z55-DN-7Ii" id="LOj-0s-Yyd"/>
                         <outlet property="sideButtonView" destination="hIz-AY-mBc" id="ThS-9s-Utj"/>
                         <outlet property="sideButtonViewGroup" destination="zFj-LW-5Tr" id="1zS-UH-Ckt"/>
                         <outlet property="topSideBtn" destination="iNO-j2-I6n" id="s62-3s-uhT"/>
@@ -347,6 +350,110 @@
             </objects>
             <point key="canvasLocation" x="-866.15384615384608" y="930.56872037914684"/>
         </scene>
+        <!--Test View Controller-->
+        <scene sceneID="K9a-D5-Bei">
+            <objects>
+                <viewController storyboardIdentifier="TestViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="dTb-ji-WSg" customClass="TestViewController" customModule="spriteMaker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tdu-4J-un9">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j2n-Db-OmB">
+                                <rect key="frame" x="0.0" y="761" width="390" height="83"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v5A-P0-iwu">
+                                        <rect key="frame" x="71.666666666666671" y="0.0" width="61.666666666666671" height="49"/>
+                                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="arrow.uturn.left" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="black"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="tappedUndo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="54d-sC-vKI"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G3A-Vx-Ii2">
+                                        <rect key="frame" x="133.33333333333334" y="0.0" width="61.666666666666657" height="49"/>
+                                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="arrow.uturn.right" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="black"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="tappedRedo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OOz-87-pJU"/>
+                                        </connections>
+                                    </button>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="lla-Hb-NJL">
+                                        <rect key="frame" x="266.66666666666669" y="9" width="113.33333333333331" height="32"/>
+                                        <color key="backgroundColor" white="0.10000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <segments>
+                                            <segment title="" image="hammer.fill" catalog="system"/>
+                                            <segment title="" image="gamecontroller.fill" catalog="system"/>
+                                        </segments>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="selectedSegmentTintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <action selector="tappedButton:" destination="dTb-ji-WSg" eventType="valueChanged" id="V9Z-CF-hVW"/>
+                                            <action selector="toggleValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="4n8-Ho-Dna"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="shf-uf-E9k">
+                                        <rect key="frame" x="9.9999999999999964" y="0.0" width="61.666666666666657" height="49"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal">
+                                            <imageReference key="image" image="house.fill" catalog="system" symbolScale="large"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="bold"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kMT-v1-lL5">
+                                        <rect key="frame" x="195" y="0.0" width="61.666666666666686" height="49"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal">
+                                            <imageReference key="image" image="square.and.arrow.up.fill" catalog="system" symbolScale="large"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="bold"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="shf-uf-E9k" firstAttribute="leading" secondItem="j2n-Db-OmB" secondAttribute="leading" constant="10" id="C4q-dO-ogX"/>
+                                    <constraint firstItem="v5A-P0-iwu" firstAttribute="leading" secondItem="shf-uf-E9k" secondAttribute="trailing" id="Jwr-kH-zaz"/>
+                                    <constraint firstAttribute="trailing" secondItem="lla-Hb-NJL" secondAttribute="trailing" constant="10" id="PtY-Vm-QNz"/>
+                                    <constraint firstItem="kMT-v1-lL5" firstAttribute="width" secondItem="G3A-Vx-Ii2" secondAttribute="width" id="QoX-4t-lS3"/>
+                                    <constraint firstItem="shf-uf-E9k" firstAttribute="width" secondItem="v5A-P0-iwu" secondAttribute="width" id="SEA-kN-uJO"/>
+                                    <constraint firstItem="lla-Hb-NJL" firstAttribute="centerY" secondItem="G3A-Vx-Ii2" secondAttribute="centerY" id="Xvu-5U-tgT"/>
+                                    <constraint firstItem="v5A-P0-iwu" firstAttribute="width" secondItem="G3A-Vx-Ii2" secondAttribute="width" id="aix-ip-nP2"/>
+                                    <constraint firstItem="G3A-Vx-Ii2" firstAttribute="top" secondItem="j2n-Db-OmB" secondAttribute="top" id="dek-Wg-W0n"/>
+                                    <constraint firstItem="shf-uf-E9k" firstAttribute="top" secondItem="j2n-Db-OmB" secondAttribute="top" id="fKH-At-biE"/>
+                                    <constraint firstItem="G3A-Vx-Ii2" firstAttribute="trailing" secondItem="j2n-Db-OmB" secondAttribute="centerX" id="fqp-eW-ZGz"/>
+                                    <constraint firstItem="kMT-v1-lL5" firstAttribute="top" secondItem="j2n-Db-OmB" secondAttribute="top" id="frA-jD-0wU"/>
+                                    <constraint firstItem="v5A-P0-iwu" firstAttribute="top" secondItem="j2n-Db-OmB" secondAttribute="top" id="hVT-EB-fjq"/>
+                                    <constraint firstItem="lla-Hb-NJL" firstAttribute="leading" secondItem="kMT-v1-lL5" secondAttribute="trailing" constant="10" id="i0A-Am-Fi9"/>
+                                    <constraint firstItem="G3A-Vx-Ii2" firstAttribute="leading" secondItem="v5A-P0-iwu" secondAttribute="trailing" id="x9E-nl-awQ"/>
+                                    <constraint firstItem="kMT-v1-lL5" firstAttribute="leading" secondItem="j2n-Db-OmB" secondAttribute="centerX" id="yK3-SD-TLK"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="9o5-7s-43B"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="9o5-7s-43B" firstAttribute="bottom" secondItem="shf-uf-E9k" secondAttribute="bottom" id="EGr-Fr-KOe"/>
+                            <constraint firstItem="9o5-7s-43B" firstAttribute="trailing" secondItem="j2n-Db-OmB" secondAttribute="trailing" id="Eao-Xm-KTm"/>
+                            <constraint firstAttribute="bottom" secondItem="j2n-Db-OmB" secondAttribute="bottom" id="LWP-GW-nD5"/>
+                            <constraint firstItem="j2n-Db-OmB" firstAttribute="top" secondItem="9o5-7s-43B" secondAttribute="bottom" constant="-49" id="T7y-P2-lTY"/>
+                            <constraint firstItem="9o5-7s-43B" firstAttribute="leading" secondItem="j2n-Db-OmB" secondAttribute="leading" id="aT2-8E-bla"/>
+                            <constraint firstItem="9o5-7s-43B" firstAttribute="bottom" secondItem="v5A-P0-iwu" secondAttribute="bottom" id="r16-Lt-18D"/>
+                            <constraint firstItem="9o5-7s-43B" firstAttribute="bottom" secondItem="G3A-Vx-Ii2" secondAttribute="bottom" id="y9U-Me-vdR"/>
+                            <constraint firstItem="9o5-7s-43B" firstAttribute="bottom" secondItem="kMT-v1-lL5" secondAttribute="bottom" id="yBB-MK-qci"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tabBarView" destination="j2n-Db-OmB" id="o7L-p6-UQ1"/>
+                        <outlet property="toggle" destination="lla-Hb-NJL" id="v34-vo-ze9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nts-Oi-Xm4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-843" y="1648"/>
+        </scene>
         <!--Home View Controller-->
         <scene sceneID="aN6-YX-azo">
             <objects>
@@ -354,13 +461,28 @@
                     <view key="view" contentMode="scaleToFill" id="xYm-Jm-dKt">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rqs-7k-8f4">
+                                <rect key="frame" x="0.0" y="55.333333333333314" width="390" height="734.66666666666674"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="9FI-xw-RTN"/>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="9FI-xw-RTN" firstAttribute="trailing" secondItem="rqs-7k-8f4" secondAttribute="trailing" id="1Q1-Cq-qhO"/>
+                            <constraint firstAttribute="bottom" secondItem="rqs-7k-8f4" secondAttribute="bottom" id="Ssk-go-pi3"/>
+                            <constraint firstItem="rqs-7k-8f4" firstAttribute="height" secondItem="xYm-Jm-dKt" secondAttribute="height" multiplier="0.93" id="dwG-ai-XfJ"/>
+                            <constraint firstItem="rqs-7k-8f4" firstAttribute="leading" secondItem="9FI-xw-RTN" secondAttribute="leading" id="fds-aR-pWQ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backgroundView" destination="rqs-7k-8f4" id="6pY-tc-hya"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ir6-dH-Awm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="34" y="1279"/>
+            <point key="canvasLocation" x="63" y="1257"/>
         </scene>
         <!--Panel Container View Controller-->
         <scene sceneID="AR0-vx-mhx">
@@ -1059,7 +1181,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kXR-UD-exs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="36" y="690"/>
+            <point key="canvasLocation" x="65" y="687"/>
         </scene>
     </scenes>
     <resources>
