--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -453,7 +453,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nts-Oi-Xm4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="965" y="965"/>
+            <point key="canvasLocation" x="883" y="931"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="aN6-YX-azo">
@@ -467,23 +467,87 @@
                                 <rect key="frame" x="0.0" y="44" width="390" height="766"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJ4-ix-hT6">
-                                        <rect key="frame" x="341" y="20" width="29" height="29"/>
+                                        <rect key="frame" x="329.33333333333331" y="9.9999999999999964" width="50.666666666666686" height="50.666666666666657"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="hJ4-ix-hT6" secondAttribute="height" multiplier="1:1" id="SJd-x7-oCr"/>
                                         </constraints>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" image="multiply.circle.fill" catalog="system">
-                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="20" scale="large"/>
+                                        <state key="normal">
+                                            <imageReference key="image" image="multiply.circle.fill" catalog="system" symbolScale="large"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                         </state>
                                         <connections>
                                             <action selector="tappedCloseBtn:" destination="tY9-KI-CQh" eventType="touchUpInside" id="veC-gg-rCD"/>
                                         </connections>
                                     </button>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="j4V-vD-ABn">
+                                        <rect key="frame" x="10" y="70.666666666666686" width="370" height="685.33333333333326"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="v0S-SA-kqm">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="3ll-VY-2cj">
+                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="RUS-1G-vmh">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </collectionViewCellContentView>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y6b-MO-UxW">
+                                        <rect key="frame" x="10" y="9.9999999999999964" width="177.33333333333334" height="50.666666666666657"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CK8-uy-7P8">
+                                                <rect key="frame" x="5" y="5.9999999999999964" width="40.666666666666664" height="39.333333333333329"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="CK8-uy-7P8" secondAttribute="height" multiplier="1:1" id="nNZ-J6-aMS"/>
+                                                </constraints>
+                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rwD-AM-Czb">
+                                                <rect key="frame" x="50.666666666666664" y="5" width="121.66666666666669" height="40.666666666666664"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <state key="normal" title="Login"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="CK8-uy-7P8" firstAttribute="top" secondItem="y6b-MO-UxW" secondAttribute="top" constant="5" id="5xe-32-3w5"/>
+                                            <constraint firstItem="rwD-AM-Czb" firstAttribute="top" secondItem="y6b-MO-UxW" secondAttribute="top" constant="5" id="Nhz-tf-W7y"/>
+                                            <constraint firstAttribute="bottom" secondItem="CK8-uy-7P8" secondAttribute="bottom" constant="5" id="Sxf-Iw-xuL"/>
+                                            <constraint firstAttribute="bottom" secondItem="rwD-AM-Czb" secondAttribute="bottom" constant="5" id="XkH-kr-YPc"/>
+                                            <constraint firstAttribute="trailing" secondItem="rwD-AM-Czb" secondAttribute="trailing" constant="5" id="qDz-K7-ASB"/>
+                                            <constraint firstItem="CK8-uy-7P8" firstAttribute="leading" secondItem="y6b-MO-UxW" secondAttribute="leading" constant="5" id="tcd-on-wSy"/>
+                                            <constraint firstItem="rwD-AM-Czb" firstAttribute="leading" secondItem="CK8-uy-7P8" secondAttribute="trailing" constant="5" id="yeO-Jq-5gY"/>
+                                            <constraint firstAttribute="width" secondItem="y6b-MO-UxW" secondAttribute="height" multiplier="7:2" id="yyp-Wf-S4Y"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xsT-6o-sa2">
+                                        <rect key="frame" x="197.33333333333334" y="23.333333333333329" width="25" height="24.333333333333329"/>
+                                        <state key="normal" image="gearshape.fill" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                                        </state>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="hJ4-ix-hT6" firstAttribute="top" secondItem="rqs-7k-8f4" secondAttribute="top" constant="20" id="0Bx-8o-R9W"/>
-                                    <constraint firstAttribute="trailing" secondItem="hJ4-ix-hT6" secondAttribute="trailing" constant="20" id="ljJ-Vn-8Yn"/>
+                                    <constraint firstItem="hJ4-ix-hT6" firstAttribute="top" secondItem="rqs-7k-8f4" secondAttribute="top" constant="10" id="0Bx-8o-R9W"/>
+                                    <constraint firstItem="j4V-vD-ABn" firstAttribute="leading" secondItem="rqs-7k-8f4" secondAttribute="leading" constant="10" id="2zR-iv-7rd"/>
+                                    <constraint firstItem="y6b-MO-UxW" firstAttribute="top" secondItem="rqs-7k-8f4" secondAttribute="top" constant="10" id="Chi-Ks-n04"/>
+                                    <constraint firstAttribute="bottom" secondItem="j4V-vD-ABn" secondAttribute="bottom" constant="10" id="H2D-w2-Rps"/>
+                                    <constraint firstItem="xsT-6o-sa2" firstAttribute="leading" secondItem="y6b-MO-UxW" secondAttribute="trailing" constant="10" id="I2l-2U-tdL"/>
+                                    <constraint firstItem="y6b-MO-UxW" firstAttribute="height" secondItem="hJ4-ix-hT6" secondAttribute="height" id="L2V-2X-l0E"/>
+                                    <constraint firstItem="y6b-MO-UxW" firstAttribute="leading" secondItem="rqs-7k-8f4" secondAttribute="leading" constant="10" id="YZa-5f-amc"/>
+                                    <constraint firstAttribute="trailing" secondItem="hJ4-ix-hT6" secondAttribute="trailing" constant="10" id="ljJ-Vn-8Yn"/>
+                                    <constraint firstAttribute="trailing" secondItem="j4V-vD-ABn" secondAttribute="trailing" constant="10" id="nnu-nv-iUg"/>
+                                    <constraint firstItem="j4V-vD-ABn" firstAttribute="top" secondItem="y6b-MO-UxW" secondAttribute="bottom" constant="10" id="qtZ-9P-9ql"/>
+                                    <constraint firstItem="xsT-6o-sa2" firstAttribute="centerY" secondItem="hJ4-ix-hT6" secondAttribute="centerY" id="tKV-Ze-eyi"/>
+                                    <constraint firstItem="hJ4-ix-hT6" firstAttribute="width" secondItem="rqs-7k-8f4" secondAttribute="width" multiplier="0.13" id="xJ6-mc-syP"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -498,6 +562,8 @@
                     </view>
                     <connections>
                         <outlet property="backgroundView" destination="rqs-7k-8f4" id="6pY-tc-hya"/>
+                        <outlet property="galleryCV" destination="j4V-vD-ABn" id="joN-il-Qjw"/>
+                        <outlet property="userStatusView" destination="y6b-MO-UxW" id="HBe-8o-WU1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ir6-dH-Awm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -571,7 +637,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-401" y="1720"/>
+            <point key="canvasLocation" x="-326" y="1720"/>
         </scene>
         <!--Panel Container View Controller-->
         <scene sceneID="AR0-vx-mhx">
@@ -1282,12 +1348,14 @@
         <image name="doc.badge.plus" catalog="system" width="119" height="128"/>
         <image name="eye.slash" catalog="system" width="128" height="86"/>
         <image name="gamecontroller.fill" catalog="system" width="128" height="80"/>
+        <image name="gearshape.fill" catalog="system" width="128" height="121"/>
         <image name="hammer.fill" catalog="system" width="128" height="117"/>
         <image name="hand.draw.fill" catalog="system" width="128" height="109"/>
         <image name="hand.point.up.left.fill" catalog="system" width="120" height="128"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
         <image name="multiply.circle.fill" catalog="system" width="128" height="121"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
+        <image name="person.circle.fill" catalog="system" width="128" height="121"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="plus.square.on.square" catalog="system" width="128" height="113"/>
         <image name="rectangle.lefthalf.inset.fill" catalog="system" width="128" height="93"/>
